--- a/packages/nuxt-ui-vue/package.json
+++ b/packages/nuxt-ui-vue/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nuxt-ui-vue",
-  "version": "1.0.2-beta.0",
+  "name": "@cuiyajie/nuxt-ui-vue",
+  "version": "1.0.2-beta.1",
   "private": false,
   "exports": {
     ".": {
